new site version

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,9 @@
-<div class="container">
+<div class="container oblique">
     <div class="page-header">
-      <h1>Save The date Radek & Paulina</h1>
+      Save the Date - Radek & Paulina 20.08.2021
     </div>
   </div>
+
+
+
+
