--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,33 +1,33 @@
 * {
     box-sizing: border-box;
   }
-  
+
   body {
     font-family: Arial, Helvetica, sans-serif;
   }
-  
+
   /* Style the header */
   header {
-    background-color: #0275d8;
+    background-color: #28a745;
     padding: 30px;
     text-align: center;
     font-size: 25px;
     color: white;
   }
-  
+
   /* Create two columns/boxes that floats next to each other */
   nav {
     float: left;
     padding: 20px;
   }
-  
+
   article {
     float: left;
     padding: 20px;
     width: 80vw;
     height: 100vh;
  }
-  
+
   /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
   @media (max-width: 760px) {
     nav, article {
