--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,12 +7,31 @@
   }
 
   /* Style the header */
-  header {
+   .test {
     background-color: #28a745;
     padding: 25px;
     text-align: center;
     font-size: 25px;
     color: white;
+  }
+
+  @media (max-width: 760px) {
+    .avatar {
+      vertical-align: middle;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+    }
+  }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .text-center {
+    text-align: center;
   }
 
   /* Create two columns/boxes that floats next to each other */
@@ -35,3 +54,4 @@
       height: auto;
     }
   }
+
