--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<header>
-    <app-header></app-header>
-</header>
-
-<section>
+<p-panel>
+      <div class="test">
+        <app-header></app-header>
+      </div>
     <nav>
         <app-menu></app-menu>
     </nav>
@@ -10,6 +9,8 @@
         <router-outlet></router-outlet>
     </article>
 
+</p-panel>
 
-</section>
+
+
 
