--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -5,7 +5,7 @@
 
   <br>
   Uroczystość zaślubin odbędzie się w <strong>
-    <a href='https://lodz.jezuici.pl/'> Parafia Najświętszego Imienia Jezus</a></strong><br>
+    <a href='https://lodz.jezuici.pl/'> Sanktuarium Najświętszego Imienia Jezus</a></strong><br>
   ul. Sienkiewicza 60<br>
   90-058 Łódź<br>
   <a href='https://goo.gl/maps/YcQjEnhWAj4CgGFJA'> Dojazd</a><br>
