--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -4,21 +4,26 @@
   </p-header>
 
   <br>
-  <img src="assets/images/demo/rece.jpg" alt="avatar" class="avatar center">
+
+  <img src="assets/images/demo/rece.jpg" alt="avatar" class="avatar">
 
 
   <div class="text-center">
     <br>
-    <h3>Hej!!</h3>
-    <br>
-    Mam bardzo radosną nowinę <strong>Radek i Paulina się zaręczyli</strong>, <br>
-    Chcemy powiadomić was że przyjęcie weselne odbędzie sie 20.08.2021 w <strong>Łodzi</strong>. <br>
-    Dlatego bardzo prosimy o to żebyście zaplanowali wolny termin na tą datę :) <br>
-    Zaproszenia dotrą w przyszłości !<br>
+    <h3><strong>Paulina Podsiadła i Radek Subczyński </strong></h3>
     <br>
 
+    <h5>
+    Z radością zawiadamiamy, iż 20 sierpnia 2021 roku <br>
+    <strong>staniemy się mężem i żoną.</strong><br>
+    Będzie nam bardzo miało, jeśli zaszczycicie nas swoją obecnością.
+  </h5>
+
+  <br>
+
+
     Szczegóły które mamy na obecną chwilę ustalone:<br>
-    Kościół: <a href="https://lodz.jezuici.pl/"><strong>Parafia Najświętszego Imienia Jezus</strong></a><br>
+    Kościół: <a href="https://lodz.jezuici.pl/"><strong>Sanktuarium Najświętszego Imienia Jezus</strong></a><br>
     Sala weselna: <a href='http://www.domweselny.org/'><strong>Zielony Buk</strong></a><br>
 
     <br>
