--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -10,17 +10,11 @@
 }
 
 .avatar {
-  vertical-align: middle;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  border-radius: 30%;
+
 }
 
-@media (max-width: 760px) {
-  .avatar {
-    vertical-align: middle;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-  }
-}
