--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
   }
 
-  body {
+  :host ::ng-deep .ui-widget  {
     font-family: Arial, Helvetica, sans-serif;
   }
 
