--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,7 @@
   }
 
   /* Style the header */
-   .test {
+   .header {
     background-color: #28a745;
     padding: 25px;
     text-align: center;
