--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -17,6 +17,8 @@
     Z radością zawiadamiamy, iż 20 sierpnia 2021 roku <br>
     <strong>staniemy się mężem i żoną.</strong><br>
     Będzie nam bardzo miało, jeśli zaszczycicie nas swoją obecnością.
+    <br>
+    Oficjalne zaproszenia dotrą w przyszłości :)
   </h5>
 
   <br>
@@ -25,6 +27,8 @@
     Szczegóły które mamy na obecną chwilę ustalone:<br>
     Kościół: <a href="https://lodz.jezuici.pl/"><strong>Sanktuarium Najświętszego Imienia Jezus</strong></a><br>
     Sala weselna: <a href='http://www.domweselny.org/'><strong>Zielony Buk</strong></a><br>
+
+    Dokładne adresy w zakładce <a href="/location"><strong>Lokalizacja</strong></a>
 
     <br>
 
