new code version

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -16,7 +16,7 @@
     <h5>
     Z radością zawiadamiamy, iż 20 sierpnia 2021 roku <br>
     <strong>staniemy się mężem i żoną.</strong><br>
-    Będzie nam bardzo miało, jeśli zaszczycicie nas swoją obecnością.
+    Będzie nam bardzo miło, jeśli zaszczycicie nas swoją obecnością.
     <br>
     Oficjalne zaproszenia dotrą w przyszłości :)
   </h5>
