--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -28,7 +28,7 @@
     Kościół: <a href="https://lodz.jezuici.pl/"><strong>Sanktuarium Najświętszego Imienia Jezus</strong></a><br>
     Sala weselna: <a href='http://www.domweselny.org/'><strong>Zielony Buk</strong></a><br>
 
-    Dokładne adresy w zakładce <a href="/location"><strong>Lokalizacja</strong></a>
+    Dokładne adresy w zakładce lokalizacja.
 
     <br>
 
