--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,7 @@
 
   /* Style the header */
    .header {
-    background-color: #28a745;
+    background-color: #66b3ff;
     padding: 25px;
     text-align: center;
     font-size: 25px;
